[package]
name = "ltx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2"
crc = "3"
thiserror = "1"
lz4_flex = { version = "0", features = ["frame"] }

[dev-dependencies]
rand = "0"
uuid = { version = "1", features = ["v4"] }
rusqlite = { version = "0", features = ["bundled"] }

[features]
compat = []