[package]
name = "litetx"
version = "0.1.0"
edition = "2021"
description = "Lite Transaction File (LTX) encoding/decoding"
homepage = "https://github.com/superfly/ltx-rs"
repository = "https://github.com/superfly/ltx-rs"
readme = "README.md"
license = "Apache-2.0"
keywords = ["sqlite", "ltx", "litefs"]
categories = ["encoding"]

[dependencies]
bitflags = "2.3"
crc = "3.0"
lz4_flex = { version = "0.11", features = ["frame"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
rand = "0.8"
rusqlite = { version = "0.29", features = ["bundled"] }
serde_test = "1.0"
uuid = { version = "1.4", features = ["v4"] }

[features]
compat = []